Fix bug with menu hiding behind HotDeals component

--- a/src/components/features/ProductSearch/ProductSearch.module.scss
+++ b/src/components/features/ProductSearch/ProductSearch.module.scss
@@ -64,7 +64,7 @@
       width: 194px;
       top: 34px;
       left: -37px;
-      z-index: 1;
+      z-index: 999;
       text-align: center;
       background-color: #ffffff;
       border: 1px solid $form-border-color;
